调试完成N32的串口

--- a/Project/n32g030/mdk/JLinkSettings.ini
+++ b/Project/n32g030/mdk/JLinkSettings.ini
@@ -22,11 +22,11 @@ SkipProgOnCRCMatch = 1
 VerifyDownload = 1
 AllowCaching = 1
 EnableFlashDL = 2
-Override = 0
-Device="ARM7"
+Override = 1
+Device="STM32F030C8"
 [GENERAL]
-WorkRAMSize = 0x5000
-WorkRAMAddr = 0x20000000
+WorkRAMSize = 0x00
+WorkRAMAddr = 0x00
 RAMUsageLimit = 0x00
 [SWO]
 SWOLogFile=""
